--- a/pandas-profiling.ipynb
+++ b/pandas-profiling.ipynb
@@ -65,8 +65,15 @@
     "\n",
     "profile = ProfileReport(df)\n",
     "profile.to_file(\"outputs/output.html\")\n",
-    "# profile.to_file(\"outputs/output.json\")\n",
-    "\n",
+    "# profile.to_file(\"outputs/output.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Show report in Jupyter notebook\n",
     "\n",
     "# !pip3 install -U pandas-profiling notebook\n",
@@ -75,10 +82,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Disable samples, correlations, missing diagrams and duplicates at once\n",
+    "profile = ProfileReport(\n",
+    "        samples=None,\n",
+    "        correlations=None,\n",
+    "        missing_diagrams=None,\n",
+    "        duplicates=None,\n",
+    "        interactions=None,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change the configuration as desired\n",
+    "profile = ProfileReport(df)\n",
+    "\n",
+    "profile.config.html.style.primary_colors = \"red\"\n",
+    "\n",
+    "profile.to_file(\"outputs/output_red.html\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use cases"
+    "## Use cases\n",
+    "\n",
+    "- Profiling large datasets\n",
+    "- Sensitive data\n",
+    "- Dataset Comparison (#ML)"
    ]
   },
   {
