--- a/pandas-profiling-radiove-vysilani.ipynb
+++ b/pandas-profiling-radiove-vysilani.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "\n",
-    "with open(\"radiove-vysilani.jsonl\", encoding=\"utf8\") as f:\n",
+    "with open(\"data/radiove-vysilani.jsonl\", encoding=\"utf8\") as f:\n",
     "    data = [json.loads(line) for line in f]\n",
     "\n",
     "df = pd.DataFrame(data)"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "4           Van Canto - (07) Last Night of the Kings  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "freq                         9408  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,13 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9613aa892b6c482791d7e57b90e4141d",
+       "model_id": "d085a8626b12491c847746f5ca5a94dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cada229a5c9442ffab5edd633d1bd189",
+       "model_id": "b7601726e6254bb090fe2ed716fefad9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef29abfb03e5403ab6895880330e27a8",
+       "model_id": "c7a323ae72114fbdae64dca131ccca38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b24d2b54f1d464fa701deb0d7c2123c",
+       "model_id": "c425e81508fc46bf8000c6b746f33f32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +289,7 @@
     "from pandas_profiling import ProfileReport\n",
     "\n",
     "prof = ProfileReport(df)\n",
-    "prof.to_file(output_file='eda-radiove-vysilani.html')"
+    "prof.to_file(output_file='outputs/radiove-vysilani-profiling.html')"
    ]
   }
  ],
