--- a/sweetviz.ipynb
+++ b/sweetviz.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,31 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "638d3ce7b0b44aaf87a05a81af184a00",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "                                             |          | [  0%]   00:00 -> (? left)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Report outputs/penguins-analyze.html was generated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sweetviz as sv\n",
     "\n",
@@ -76,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,31 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b7fe9c8b64d44c08dc44f9ca0456c7e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "                                             |          | [  0%]   00:00 -> (? left)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Report outputs/penguins-compare.html was generated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "compare_report = sv.compare([X_train, 'Train'], [X_test, 'Test'])\n",
     "compare_report.show_html('outputs/penguins-compare.html', open_browser=False)"
@@ -136,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.1 (v3.10.1:2cd268a3a9, Dec  6 2021, 14:28:59) [Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
