--- a/pandas-profiling.ipynb
+++ b/pandas-profiling.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,77 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6e3a29071434397bdf53b0da96284ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "102b5e2a41f04e4b873945148da2fe1c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb49980cbdef48f0aa61c260565a050e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a31e7b1b201448c8cd98458ca9ac75e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pandas_profiling import ProfileReport\n",
     "\n",
     "profile = ProfileReport(df)\n",
     "profile.to_file(\"outputs/titanic-profiling.html\")\n",
-    "# profile.to_file(\"outputs/output.json\")"
+    "# profile.to_file(\"outputs/titanic-profiling.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,86 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb5cb5079ba945eda123833783385ba5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas_profiling/model/missing.py:78: UserWarning: There was an attempt to generate the Count missing values diagrams, but this failed.\n",
-      "To hide this warning, disable the calculation\n",
-      "(using `df.profile_report(missing_diagrams={\"Count\": False}`)\n",
-      "If this is problematic for your use case, please report this as an issue:\n",
-      "https://github.com/ydataai/pandas-profiling/issues\n",
-      "(include the error message: 'range() arg 3 must not be zero')\n",
-      "  warnings.warn(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas_profiling/model/missing.py:78: UserWarning: There was an attempt to generate the Matrix missing values diagrams, but this failed.\n",
-      "To hide this warning, disable the calculation\n",
-      "(using `df.profile_report(missing_diagrams={\"Matrix\": False}`)\n",
-      "If this is problematic for your use case, please report this as an issue:\n",
-      "https://github.com/ydataai/pandas-profiling/issues\n",
-      "(include the error message: 'range() arg 3 must not be zero')\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4c40ccb13954353bc20c11b91ece1bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d66782501704815aeecb67e4a9f9be2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51b918f2cc7f4b39b73bff26876e0fb8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Change the configuration as desired\n",
     "profile = ProfileReport(df)\n",
@@ -265,66 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cacc49a8be2044c2ad734b2faba9d7a5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "029c2ab4074a4159b5b4dc75ac8992da",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdec9bc9b51c476c89bc4d9ec57e8d77",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89ac993d951d491dafdc00618095a95d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We only use the first 100 data points\n",
     "prof = ProfileReport(df.sample(n=100)) \n",
@@ -342,66 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7c9486e27e14b5aae5a34a7cf353866",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b03ded1241b4c4bac34ba77abb3e4df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a562017a43df4913b8e1fd631142aa52",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc2efc723ea943b2b2133f62ba1ba8b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "profile = ProfileReport(df, minimal=True)\n",
     "profile.to_file(output_file=\"outputs/titanic-profiling-min.html\")"
